chore: refactor utils